# Container_Torch

./: .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile.cpu  Dockerfile.cuda  README.md  vcpkg.txt
.github/workflows/: container-image.yml  manual.yml  opencv-windows.yml
